--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
 </div>
 
-<!-- credits -->
+<!-- credits
 <div class="text-center">
     <p>
         <a href="http://jasonwatmore.com/post/2017/02/22/mean-with-angular-2-user-registration-and-login-example-tutorial" target="_top">MEAN Stack with Angular 2 - User Registration and Login Example & Tutorial</a>
@@ -17,3 +17,4 @@
         <a href="http://jasonwatmore.com" target="_top">JasonWatmore.com</a>
     </p>
 </div>
+-->
