--- a/client/app/vermatti-header/vermatti-header.component.html
+++ b/client/app/vermatti-header/vermatti-header.component.html
@@ -12,7 +12,7 @@
     <div class="col-md-6 logo-w3layouts text-center">
       <h1 class="logo-w3layouts">
         <a class="navbar-brand" href="index.html">
-          Goggles </a>
+          VERMATTI </a>
       </h1>
     </div>
 
